// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`ExploreLink renders with container 1`] = `
<DocumentFragment>
  <a
    href="/tree/main/a/b/c"
  >
    xxx
  </a>
</DocumentFragment>
`;

exports[`ExploreLink renders with object 1`] = `
<DocumentFragment>
  <a
    href="/content/main/"
  >
    xxx
  </a>
</DocumentFragment>
`;
